Changed static HTML to Jekyll

--- a/contact.html
+++ b/contact.html
@@ -1,9 +1,218 @@
-<!DOCTYPE html> <html class=no-js lang=en-us> <head> <meta charset=utf-8> <meta name=description content="Engineer, full-stack developer and UX evangelist, looking to apply new techniques to the web and have fun."> <meta name=keywords content="Full-stack developer, Engineer, front-end developer, back-end developer, ruby, CSS3, angularjs"> <meta name=viewport content="width=device-width,initial-scale=1,minimum-scale=1,minimal-ui"> <title>Luis Castro - Full-Stack Developer</title> <link rel=apple-touch-icon sizes=57x57 href=/apple-touch-icon-57x57.dbc0bb7c.png> <link rel=apple-touch-icon sizes=60x60 href=/apple-touch-icon-60x60.0505d20d.png> <link rel=apple-touch-icon sizes=72x72 href=/apple-touch-icon-72x72.9156f94d.png> <link rel=apple-touch-icon sizes=76x76 href=/apple-touch-icon-76x76.947f334c.png> <link rel=apple-touch-icon sizes=114x114 href=/apple-touch-icon-114x114.182de21d.png> <link rel=apple-touch-icon sizes=120x120 href=/apple-touch-icon-120x120.d91e6ad3.png> <link rel=apple-touch-icon sizes=144x144 href=/apple-touch-icon-144x144.9f845b80.png> <link rel=apple-touch-icon sizes=152x152 href=/apple-touch-icon-152x152.07595b3d.png> <link rel=apple-touch-icon sizes=180x180 href=/apple-touch-icon-180x180.b8c1928d.png> <link rel=icon type=image/png href=/favicon-32x32.5e3392cc.png sizes=32x32> <link rel=icon type=image/png href=/android-chrome-192x192.6ac85c11.png sizes=192x192> <link rel=icon type=image/png href=/favicon-96x96.79a22096.png sizes=96x96> <link rel=icon type=image/png href=/favicon-16x16.a0fbc58b.png sizes=16x16> <link rel=manifest href=/manifest.json> <meta name=msapplication-TileColor content=#da532c> <meta name=msapplication-TileImage content=/mstile-144x144.379c806f.png> <meta name=theme-color content=#ffffff> <meta name=twitter:card content=summary> <meta name=twitter:site content=@castrolem> <meta name=twitter:domain content=luiscastro.co> <meta name=twitter:creator content=@castrolem> <meta name=twitter:title content="Engineer, full-stack developer and UX evangelist"> <meta name=twitter:image:src content=/profile.860aa821.jpg> <link rel=canonical href="http://luiscastro.co/"> <meta name=apple-mobile-web-app-title content="Luis Castro"> <link rel=stylesheet href=styles/vendor.32f604fa.css> <link rel=stylesheet href=styles/main.7df5b8c5.css> <script src=scripts/vendor/modernizr.fbe20327.js></script>  <body> <!--[if lt IE 10]>
+<!DOCTYPE html>
+<html>
+
+  <head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <title>Luis Castro</title>
+  <meta name="description" content="I'm a Full-Stack Developer and computer engineer currently traveling the world. In my work, I combine 3 basic principles User Experience, Beauty and Purpose. I have 5+ years doing Software Development and have completed more than 17 projects (managed 4 of them) in 2 continents. I make webapps that work fast, are easy to use, persuasive, relevant to the customer and fit in the business environment.">
+
+  <link rel="stylesheet" href="/css/main.css">
+  <link rel="canonical" href="http://luiscastro.co/contact.html">
+  <link rel="alternate" type="application/rss+xml" title="Luis Castro" href="http://luiscastro.co/feed.xml">
+
+  <link rel="stylesheet" href="//cdn.jsdelivr.net/open-iconic/1.1.0/font/css/open-iconic.min.css" />
+  <link rel="stylesheet" href="https://npmcdn.com/flickity@1.1/dist/flickity.min.css" />
+</head>
+
+
+  <body>
+    <!--[if lt IE 10]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-    <![endif]--> <nav class=main-nav> <div class=wrapper> <a class="luis-logo light-logo" href="/"> <span class=text>Luis Castro</span> </a> <!-- navigation desktop --> <ul> <li><a class=link href=index.html#biography>bio</a></li> <li><a class=link href=index.html#workflow>workflow</a></li> <li><a class=link href=index.html#projects>projects</a></li> <li><a class=link href=#contact-consultancy>consulting</a></li> <li><a class="link not-ready" href=#>blog</a></li> <li><a class="link not-ready" href=#>open source</a></li> <li><a class="link not-ready" href=#>open source</a></li> <li><a class=link href=/contact.html>contact</a></li> </ul> <!-- mobile switcher --> <a class=mobile-menu-switch id=mobile-menu-switch href=#> <span class=oi data-glyph=grid-three-up></span> </a> </div> </nav> <!-- mobile navigation items --> <nav class=mobile-main-nav> <ul> <li><a class=link href=#biography>bio</a></li> <li><a class=link href=#workflow>workflow</a></li> <li><a class=link href=#projects>projects</a></li> <li><a class=link href=#contact-consultancy>consulting</a></li> <li><a class="link not-ready" href=#>blog</a></li> <li><a class="link not-ready" href=#>open source</a></li> <li><a class=link href=/contact.html>contact</a></li> </ul> </nav> <section class="money-shot hero-section with-background-image" id=money-shot> <div class=wrapper> <h1>UX and Front-End Engineer</h1> </div> </section> <nav class=contact-nav> <a class="button contact-info" href=#contact-consultancy> Consultancy </a> <a class="button contact-info" href=#contact-code-review> Code Review </a> </nav> <section class=process-section id=contact-consultancy> <div class=wrapper> <h2>Let's make the best product together...</h2> <h4>Want to work with me side by side?</h4> <p> My specialties are writing and scaling CSS/Designs for big companies and their sites. I will have a strong focus on performance and robuts development, I will write the future face of your company for users and make the patterns that I developed available to you, rest assured that the code will scale and will last. </p> <p> It's all about the <b>experience</b> and how <b>cool</b> is your project, I want to know more about <b>your company</b> and the <b>people</b> that's working in it, after that we can talk about bugdet, location and time. </p> </div> </section> <section class="conferences hero-section with-background-image" id=money-shot> <div class=wrapper> <h1>Conference speaker</h1> <a class="button call-to-action" href="mailto:luiscastroem@gmail.com?subject=Let%E2%80%99s%20have%20you%20on%20our%20conference">Attend to your conference?</a> </div> </section> <section class=process-section id=contact-code-review> <div class=wrapper> <div class=row> <div class="column-2-3 column__mobile-1-1"> <h2>Not sure how your project is going to scale?</h2> <h4>Is your team already working on designs?</h4> <p> Probably you're not sure if your team is heading in the right direction and want to be <b>confident</b> that the project will scale and last. </p> <p> A quick-turnaround, off-the-shelf, affordable service I offer is remote CSS code reviews. The review covers things like syntax and formatting, efficiency, architecture, sanity, architectural/scalability concerns and a lot, lot more. </p> <p> The code review process will follow this steps: </p> <ol> <li>Review of Designs</li> <li>Review of User Interaction patterns</li> <li>Review of current HTML/CSS structure</li> <li>Write documentation for best practices</li> <li>Make suggestions based on findings</li> <li>Create a CSS Style-guide with structured examples</li> <li>Final document with procedures to follow</li> <li>Review with the client after procedures have been implemented</li> </ol> <p> This service is perfect for projects whose budget typically would not stretch to getting me on-site for a number of days, but do require the same type and quality of input. </p> </div> <div class="column-1-3 column__mobile-1-1"> <div class=code-review_price> <p> <span>$ 1,000.00</span> </p> <a class="button call-to-action" href="mailto:luiscastroem@gmail.com?subject=Code%20review">Arrange a review</a> <small> Initial price covers the work that is listed in the code review process, for additional inquiries please head to the <a href=#contact-consultancy>consultancy section</a> </small> </div> </div> </div> </div> </section> <section id=calendar> <div class=wrapper> <!-- TODO: Make calendar --> </div> </section> <section class=dark-background id=companies-logos> <div class=wrapper> <ul class=companies-worked-at> <li> <img class=company-worked-at src=/images/clients/client-rxspeed.b4d27aa3.png alt="RxSpeed"> </li> <li> <img class=company-worked-at src=/images/clients/client-realscout.f030515e.png alt="RealScout Inc."> </li> <li> <img class=company-worked-at src=/images/clients/client-yummly.aa859ff2.png alt="Yummly"> </li> <li> <img class=company-worked-at src=/images/clients/client-nextgalaxy.9c782f9d.png alt="Next Galaxy Corp."> </li> <li> <img class=company-worked-at src=/images/clients/client-hashlabs.8d40b056.png alt="Hash Labs LLC."> </li> <li> <img class=company-worked-at src=/images/clients/client-veroes.5be383b4.png alt="Veroes C.A."> </li> </ul> </div> </section> <section class="time-call-to-action cta-section" id=time-call-to-action> <div class=wrapper> <!-- TODO: Make timer --> <h3>Scale it now!</h3> <h5> I will write the future face of your company for users and make the patterns that I developed available to you, rest assured that the code will scale and will last. </h5> <a class="button call-to-action" href="mailto:luiscastroem@gmail.com?subject=Let%E2%80%99s%20work%20together">Let's work together</a> </div> </section> <footer class=main-footer> <div class=wrapper> <small> &#169; Luis Castro | <script>document.write(new Date().getFullYear());</script> </small> <p class=site-explanation> Made this site with HTML5, CSS3, JavaScript and lots of beverages. <a class=link href=https://github.com/Castrolem/personal-site target=_blank rel=nofollow>Checkout more at github</a> </p> </div> </footer> <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. --> <script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    <![endif]-->
+
+    <header class="site-header">
+  <nav class="main-nav">
+    <div class="wrapper">
+      <a class="luis-logo light-logo site-title" href="/">
+        <span class="text">Luis Castro</span>
+      </a>
+      <!-- navigation desktop -->
+      <ul>
+        <li><a class="link" href="/#biography">bio</a></li>
+        <li><a class="link" href="/#workflow">workflow</a></li>
+        <li><a class="link" href="/#projects">projects</a></li>
+        <li><a class="link" href="/contact">contact</a></li>
+      </ul>
+      <!-- mobile switcher -->
+      <a class="mobile-menu-switch" id="mobile-menu-switch" href="#">
+        <span class="oi" data-glyph="grid-three-up"></span>
+      </a>
+    </div>
+  </nav>
+
+  <!-- mobile navigation items -->
+  <nav class="mobile-main-nav">
+    <ul>
+      <li><a class="link" href="#biography">bio</a></li>
+      <li><a class="link" href="#workflow">workflow</a></li>
+      <li><a class="link" href="#projects">projects</a></li>
+      <li><a class="link" href="/contact">contact</a></li>
+    </ul>
+  </nav>
+</header>
+
+
+    <section class="money-shot hero-section with-background-image" id="money-shot">
+  <div class="wrapper">
+    <h1>UX and Front-End Engineer</h1>
+  </div>
+</section>
+
+<nav class="contact-nav">
+  <a class="button contact-info" href="#contact-consultancy">
+    Consultancy
+  </a>
+
+  <a class="button contact-info" href="#contact-code-review">
+    Code Review
+  </a>
+</nav>
+
+<section class="process-section" id="contact-consultancy">
+  <div class="wrapper">
+    <h2>Let's make the best product together...</h2>
+    <h4>Want to work with me side by side?</h4>
+    <p>
+      My specialties are writing and scaling CSS/Designs for big companies and their sites.
+      I will have a strong focus on performance and robuts development, I will write the future
+      face of your company for users and make the patterns that I developed available to you,
+      rest assured that the code will scale and will last.
+    </p>
+    <p>
+      It's all about the <b>experience</b> and how <b>cool</b> is your project, I want to know
+      more about <b>your company</b> and the <b>people</b> that's working in it, after that we can talk about
+      bugdet, location and time.
+    </p>
+  </div>
+</section>
+
+<section class="conferences hero-section with-background-image" id="money-shot">
+  <div class="wrapper">
+    <h1>Conference speaker</h1>
+    <a class="button call-to-action" href="mailto:luiscastroem@gmail.com?subject=Let%E2%80%99s%20have%20you%20on%20our%20conference">Attend to your conference?</a>
+  </div>
+</section>
+
+<section class="process-section" id="contact-code-review">
+  <div class="wrapper">
+    <div class="row">
+      <div class="column-8-12 column__mobile-1-1">
+        <h2>Not sure how your project is going to scale?</h2>
+        <h4>Is your team already working on designs?</h4>
+
+        <p>
+          Probably you're not sure if your team is heading in the right direction
+          and want to be <b>confident</b> that the project will scale and last.
+        </p>
+        <p>
+          A quick-turnaround, off-the-shelf, affordable service I offer is remote CSS code reviews.
+          The review covers things like syntax and formatting, efficiency, architecture, sanity, architectural/scalability
+          concerns and a lot, lot more.
+        </p>
+        <p>
+          The code review process will follow this steps:
+        </p>
+        <ol>
+          <li>Review of Designs</li>
+          <li>Review of User Interaction patterns</li>
+          <li>Review of current HTML/CSS structure</li>
+          <li>Write documentation for best practices</li>
+          <li>Make suggestions based on findings</li>
+          <li>Create a CSS Style-guide with structured examples</li>
+          <li>Final document with procedures to follow</li>
+          <li>Review with the client after procedures have been implemented</li>
+        </ol>
+        <p>
+          This service is perfect for projects whose budget typically would not stretch to
+          getting me on-site for a number of days, but do require the same type and quality of input.
+        </p>
+      </div>
+
+      <div class="column-4-12 column__mobile-1-1">
+        <div class="code-review_price">
+          <p>
+            <span class="">$ 1,000.00</span>
+          </p>
+          <a class="button call-to-action" href="mailto:luiscastroem@gmail.com?subject=Code%20review">Arrange a review</a>
+          <small>
+            Initial price covers the work that is listed in the code review process,
+            for additional inquiries please head to the <a href="#contact-consultancy">consultancy section</a>
+          </small>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="dark-background" id="companies-logos">
+  <div class="wrapper">
+    <ul class="companies-worked-at">
+      <li>
+        <img class="company-worked-at" src="/img/clients/client-rxspeed.png" alt="RxSpeed" />
+      </li>
+      <li>
+        <img class="company-worked-at" src="/img/clients/client-realscout.png" alt="RealScout Inc." />
+      </li>
+      <li>
+        <img class="company-worked-at" src="/img/clients/client-yummly.png" alt="Yummly" />
+      </li>
+      <li>
+        <img class="company-worked-at" src="/img/clients/client-nextgalaxy.png" alt="Next Galaxy Corp." />
+      </li>
+      <li>
+        <img class="company-worked-at" src="/img/clients/client-hashlabs.png" alt="Hash Labs LLC." />
+      </li>
+      <li>
+        <img class="company-worked-at" src="/img/clients/client-veroes.png" alt="Veroes C.A." />
+      </li>
+    </ul>
+  </div>
+</section>
+
+
+    <div class="cta-section">
+      <h3>Scale it now!</h3>
+      <h5>
+        I will write the future face of your company for users and make the patterns that I developed available to you,
+        rest assured that the code will scale and will last.
+      </h5>
+      <a class="button call-to-action" href="mailto:luiscastroem@gmail.com?subject=Let%E2%80%99s%20work%20together">Let's work together</a>
+    </div>
+
+    <footer class="main-footer site-footer">
+  <div class="wrapper">
+    <small>
+      &#169; Luis Castro | <script>document.write(new Date().getFullYear());</script>
+    </small>
+    <p class="site-explanation">
+      Made this site with HTML5, CSS3, JavaScript and lots of beverages.
+      <a class="link" href="https://github.com/Castrolem/personal-site" target="_blank" rel="nofollow">Checkout more at github</a> or
+      <span class="rss-subscribe">subscribe <a class="link" href="/feed.xml">via RSS</a></span>
+    </p>
+  </div>
+</footer>
+
+
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
       ga('create', 'UA-63883768-1', 'auto');
-      ga('send', 'pageview');</script> <script src=scripts/vendor.b2dccbdb.js></script> <script src=scripts/main.208c0174.js></script>  
+      ga('send', 'pageview');
+
+    </script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+    <script src="https://npmcdn.com/flickity@1.1/dist/flickity.pkgd.js"></script>
+    
+    
+    <script src="js/navigation.js"></script>
+    <script src="js/smoothscroll.js"></script>
+    <script src="js/main.js"></script>
+  </body>
+
+</html>
