Update some CSS and availability

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       I have 5+ years doing Software Development and have completed more than 17 projects (managed 4 of them) in 2 continents.
       I make webapps that work fast, are easy to use, persuasive, relevant to the customer and fit in the business environment.
       <br/>
-      For <b>Q3</b> I'm Currently: <em>Available to take more projects</em>.
+      I'm Currently: <em>Unavailable to take on more projects</em>.
     </p>
     <a class="button call-to-action" href="mailto:luiscastroem@gmail.com?subject=Let%E2%80%99s%20work%20together">Let's work together</a>
   </div>
@@ -300,7 +300,7 @@
 
     <div class="code-review_price">
       <a class="button aside" href="mailto:luiscastroem@gmail.com?subject=Let%E2%80%99s%20work%20together">
-        Currently <b>accepting new projects</b> for Q3, 2016
+        Currently <b>NOT</b> accepting new projects
       </a>
       <small class="text-center">
         <a href="/contact#contact-consultancy">Learn more</a>
