Adds new blog post

--- a/contact.html
+++ b/contact.html
@@ -10,8 +10,8 @@
   <meta name="description" content="I'm a Full-Stack Developer and computer engineer currently traveling the world. In my work, I combine 3 basic principles User Experience, Beauty and Purpose. I have 5+ years doing Software Development and have completed more than 17 projects (managed 4 of them) in 2 continents. I make webapps that work fast, are easy to use, persuasive, relevant to the customer and fit in the business environment.">
 
   <link rel="stylesheet" href="/css/main.css">
-  <link rel="canonical" href="http://luiscastro.co/contact.html">
-  <link rel="alternate" type="application/rss+xml" title="Luis Castro" href="http://luiscastro.co/feed.xml">
+  <link rel="canonical" href="http://localhost:4000/contact.html">
+  <link rel="alternate" type="application/rss+xml" title="Luis Castro" href="http://localhost:4000/feed.xml">
 
   <link rel="stylesheet" href="//cdn.jsdelivr.net/open-iconic/1.1.0/font/css/open-iconic.min.css" />
   <link rel="stylesheet" href="https://npmcdn.com/flickity@1.1/dist/flickity.min.css" />
