fix: Add better verbs toassociations section.

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
         <div class="resume-item" itemscope itemprop="memberOf" itemtype="http://schema.org/Organization">
           <h3 class="resume-item-title" itemprop="name">Refresh Valencia</h3>
           <h4 class="resume-item-details" itemprop="description">Volunteer &bull; 2011 &mdash; 2012</h4>
-          <p class="resume-item-copy">Help in the making of this event to teach tech and science to other people at no cost.</p>
+          <p class="resume-item-copy">Helped in the making of this event to teach tech and science to other people at no cost.</p>
         </div>
         
 
