feat(analytics): add google code

--- a/index.html
+++ b/index.html
@@ -301,4 +301,15 @@
       <p class="footer-line">Made by <a href="http://twitter.com/castrolem" rel="nofollow">@castrolem</a>. Check me on <a href="https://github.com/castrolem/personal-site" rel="nofollow">GitHub</a>.</p>
     </footer>
   </body>
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-63883768-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-63883768-1');
+  </script>
+
 </html>
