chore: update design and text

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <!-- GitHub link -->
   
   <li class="icon-link-item">
-    <a href="https://github.com/castrolem" class="icon-link" itemprop="sameAs"><i class="fab fa-github"></i>
+    <a rel="noreferrer" href="https://github.com/castrolem" class="icon-link" itemprop="sameAs"><i class="fab fa-github"></i>
     </a>
   </li>
   
@@ -45,7 +45,7 @@
   <!-- Twitter link -->
   
   <li class="icon-link-item">
-    <a href="http://twitter.com/castrolem" class="icon-link" itemprop="sameAs"><i class="fab fa-twitter"></i></a>
+    <a rel="noreferrer" href="http://twitter.com/castrolem" class="icon-link" itemprop="sameAs"><i class="fab fa-twitter"></i></a>
   </li>
   
 
@@ -61,7 +61,7 @@
   <!-- LinkedIn link -->
   
   <li class="icon-link-item">
-    <a href="https://www.linkedin.com/in/castrolem" class="icon-link" itemprop="sameAs"><i class="fab fa-linkedin-in"></i></a>
+    <a rel="noreferrer" href="https://www.linkedin.com/in/castrolem" class="icon-link" itemprop="sameAs"><i class="fab fa-linkedin-in"></i></a>
   </li>
   
 
@@ -71,7 +71,7 @@
   <!-- Website link -->
   
   <li class="icon-link-item">
-    <a href="http://luiscastro.co" class="icon-link" itemprop="url"><i class="fas fa-globe-americas"></i></a>
+    <a rel="noreferrer" href="http://luiscastro.co" class="icon-link" itemprop="url"><i class="fas fa-globe-americas"></i></a>
   </li>
   
 
@@ -106,12 +106,12 @@
 		
 		<div class="resume-item">
 			<h4 class="resume-item-details">Tools &amp; Technologies</h4>
-			<p class="resume-item-copy">Javascript, ReactJS, React Native, Redux, Static Typing with Flow, Ruby, Ruby on Rails, PostgreSQL, PostGIS, Git, HTML5 and CSS3.</p>
+			<p class="resume-item-copy">Javascript, ReactJS, React Native, Redux, TypeScript, Ruby, Ruby on Rails, Swift & SwiftUI, PostgreSQL, PostGIS, Git, HTML5 and CSS3.</p>
 		</div>
 		
 		<div class="resume-item">
 			<h4 class="resume-item-details">Industry Knowledge</h4>
-			<p class="resume-item-copy">User Experience (UX), Strategic Planning, Design, Composition, Sketch, Pixelmator and Project Management.</p>
+			<p class="resume-item-copy">User Experience (UX), Strategic Planning, Design, Composition, Sketch, Figma, Pixelmator and Project Management.</p>
 		</div>
 		
 		<div class="resume-item">
@@ -134,7 +134,7 @@
 		<div class="resume-item" itemscope itemprop="worksFor" itemtype="http://schema.org/Organization">
 			<h3 class="resume-item-title" itemprop="name">Cameo</h3>
 			<h4 class="resume-item-details" itemprop="description">Full-stack developer (Senior Developer) &bull; Aug, 2019 &mdash; Present</h4>
-			<p class="resume-item-copy">Book personalized video shoutouts from your favorite people. <ul class="resume-item-list"><li>Improve testing practices and empower the teams to follow best practices.</li><li>Build a robust REST and performant set of APIs using NodeJS</li><li>Optimize and scale the current solutions.</li></ul></p>
+			<p class="resume-item-copy">Book personalized video shoutouts from your favorite people. <ul class="resume-item-list"><li>Improve testing practices and empower the teams to follow best practices.</li><li>Build a robust REST and performant set of APIs using NodeJS</li><li>Optimize and scale the current solutions.</li><li>Created a unique style-guide extensible for developers and designers. (For the React Native app and Website)</li><li>Improved previous testing practices, introduced integration testing and added Cypress to enable easier end-to-end tests.</li></ul></p>
 		</div><!-- end of resume-item -->
 		
 		<div class="resume-item" itemscope itemprop="worksFor" itemtype="http://schema.org/Organization">
@@ -175,7 +175,7 @@
 		
 		<div class="resume-item" itemscope itemprop="worksFor" itemtype="http://schema.org/Organization">
 			<h3 class="resume-item-title" itemprop="name">Debt Collective</h3>
-			<p class="resume-item-copy" itemprop="description">Empower NGOs by creating a <a href="https://github.com/debtcollective/fundraising" target="_blank">fundraising</a> software, to accept donations and give accountability for both the end-user donating to the cause and the NGO and give back to the community.</p>
+			<p class="resume-item-copy" itemprop="description">Empower NGOs by creating a <a href="https://github.com/debtcollective/fundraising" rel="noreferrer" target="_blank">fundraising</a> software, to accept donations and give accountability for both the end-user donating to the cause and the NGO and give back to the community.</p>
 		</div><!-- end of resume-item -->
 		
 
