chore: improve accesibility of social media links

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <!-- GitHub link -->
   
   <li class="icon-link-item">
-    <a rel="noreferrer" href="https://github.com/castrolem" class="icon-link" itemprop="sameAs"><i class="fab fa-github"></i>
+    <a rel="noreferrer" href="https://github.com/castrolem" aria-label="Github" class="icon-link" itemprop="sameAs"><i class="fab fa-github"></i>
     </a>
   </li>
   
@@ -45,7 +45,7 @@
   <!-- Twitter link -->
   
   <li class="icon-link-item">
-    <a rel="noreferrer" href="http://twitter.com/castrolem" class="icon-link" itemprop="sameAs"><i class="fab fa-twitter"></i></a>
+    <a rel="noreferrer" href="http://twitter.com/castrolem" aria-label="Twitter" class="icon-link" itemprop="sameAs"><i class="fab fa-twitter"></i></a>
   </li>
   
 
@@ -61,7 +61,7 @@
   <!-- LinkedIn link -->
   
   <li class="icon-link-item">
-    <a rel="noreferrer" href="https://www.linkedin.com/in/castrolem" class="icon-link" itemprop="sameAs"><i class="fab fa-linkedin-in"></i></a>
+    <a rel="noreferrer" href="https://www.linkedin.com/in/castrolem" aria-label="LinkedIn" class="icon-link" itemprop="sameAs"><i class="fab fa-linkedin-in"></i></a>
   </li>
   
 
@@ -71,7 +71,7 @@
   <!-- Website link -->
   
   <li class="icon-link-item">
-    <a rel="noreferrer" href="http://luiscastro.co" class="icon-link" itemprop="url"><i class="fas fa-globe-americas"></i></a>
+    <a rel="noreferrer" href="http://luiscastro.co" aria-label="Website" class="icon-link" itemprop="url"><i class="fas fa-globe-americas"></i></a>
   </li>
   
 
