chore: new content

--- a/404.html
+++ b/404.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
 <html lang="en"><head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Luis Castro • Full Stack Developer</title>
+	<title>Luis Castro • Full Stack Developer</title>
 
-  <link href='https://fonts.googleapis.com/css?family=Lora:400,700' rel='stylesheet' type='text/css'>
-  <meta name="description" content="I'm a Full Stack Developer that makes products that work fast, are easy to use, persuasive, relevant to the customer and fit in the business environment. Currently working in Barcelona, Spain.">
+	<link href="https://fonts.googleapis.com/css2?family=Roboto&family=Sora:wght@500&display=swap" type='text/css' rel="stylesheet">
+	<meta name="description"
+		  content="I'm a Full Stack Developer that makes products that work fast, are easy to use, persuasive, relevant to the customer and fit in the business environment. Currently working from Barcelona, Spain.">
 
-  <link rel="stylesheet" href="css/main.css">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/solid.css" integrity="sha384-rdyFrfAIC05c5ph7BKz3l5NG5yEottvO/DQ0dCrwD8gzeQDjYBHNr1ucUpQuljos" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/brands.css" integrity="sha384-QT2Z8ljl3UupqMtQNmPyhSPO/d5qbrzWmFxJqmY7tqoTuT2YrQLEqzvVOP2cT5XW" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/fontawesome.css" integrity="sha384-u5J7JghGz0qUrmEsWzBQkfvc8nK3fUT7DCaQzNQ+q4oEXhGSx+P2OqjWsfIRB8QT" crossorigin="anonymous">
-  <link rel="canonical" href="http://luiscastro.co//404.html">
-  <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/solid.css"
+		  integrity="sha384-rdyFrfAIC05c5ph7BKz3l5NG5yEottvO/DQ0dCrwD8gzeQDjYBHNr1ucUpQuljos" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/brands.css"
+		  integrity="sha384-QT2Z8ljl3UupqMtQNmPyhSPO/d5qbrzWmFxJqmY7tqoTuT2YrQLEqzvVOP2cT5XW" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/fontawesome.css"
+		  integrity="sha384-u5J7JghGz0qUrmEsWzBQkfvc8nK3fUT7DCaQzNQ+q4oEXhGSx+P2OqjWsfIRB8QT" crossorigin="anonymous">
+	<link rel="canonical" href="http://luiscastro.co//404.html">
+	<link rel="icon" type="image/x-icon" href="/favicon.ico"/>
 </head>
 <body><header class="site-header" role="banner">
 
@@ -72,7 +76,7 @@
 </div>
 
       <div class="footer-col footer-col-3">
-        <p>I&#39;m a Full Stack Developer that makes products that work fast, are easy to use, persuasive, relevant to the customer and fit in the business environment. Currently working in Barcelona, Spain.</p>
+        <p>I&#39;m a Full Stack Developer that makes products that work fast, are easy to use, persuasive, relevant to the customer and fit in the business environment. Currently working from Barcelona, Spain.</p>
       </div>
     </div>
 
