--- a/index.html
+++ b/index.html
@@ -1,28 +1,32 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Luis Castro • Full Stack Developer</title>
+	<title>Luis Castro • Full Stack Developer</title>
 
-  <link href='https://fonts.googleapis.com/css?family=Lora:400,700' rel='stylesheet' type='text/css'>
-  <meta name="description" content="I'm a Full Stack Developer that makes products that work fast, are easy to use, persuasive, relevant to the customer and fit in the business environment. Currently working in Barcelona, Spain.">
+	<link href="https://fonts.googleapis.com/css2?family=Roboto&family=Sora:wght@500&display=swap" type='text/css' rel="stylesheet">
+	<meta name="description"
+		  content="I'm a Full Stack Developer that makes products that work fast, are easy to use, persuasive, relevant to the customer and fit in the business environment. Currently working from Barcelona, Spain.">
 
-  <link rel="stylesheet" href="css/main.css">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/solid.css" integrity="sha384-rdyFrfAIC05c5ph7BKz3l5NG5yEottvO/DQ0dCrwD8gzeQDjYBHNr1ucUpQuljos" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/brands.css" integrity="sha384-QT2Z8ljl3UupqMtQNmPyhSPO/d5qbrzWmFxJqmY7tqoTuT2YrQLEqzvVOP2cT5XW" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/fontawesome.css" integrity="sha384-u5J7JghGz0qUrmEsWzBQkfvc8nK3fUT7DCaQzNQ+q4oEXhGSx+P2OqjWsfIRB8QT" crossorigin="anonymous">
-  <link rel="canonical" href="http://luiscastro.co//">
-  <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/solid.css"
+		  integrity="sha384-rdyFrfAIC05c5ph7BKz3l5NG5yEottvO/DQ0dCrwD8gzeQDjYBHNr1ucUpQuljos" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/brands.css"
+		  integrity="sha384-QT2Z8ljl3UupqMtQNmPyhSPO/d5qbrzWmFxJqmY7tqoTuT2YrQLEqzvVOP2cT5XW" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/fontawesome.css"
+		  integrity="sha384-u5J7JghGz0qUrmEsWzBQkfvc8nK3fUT7DCaQzNQ+q4oEXhGSx+P2OqjWsfIRB8QT" crossorigin="anonymous">
+	<link rel="canonical" href="http://luiscastro.co//">
+	<link rel="icon" type="image/x-icon" href="/favicon.ico"/>
 </head>
 
 <body class="theme-">
 <header class="page-header">
 	<div class="wrapper" itemscope itemtype="http://schema.org/Person">
 		
-		<img src="images/avatar@2x.jpg" alt="my photo" class="avatar no-print" itemprop="image">
+		<img src="images/avatar.jpg" alt="my photo" class="avatar no-print" itemprop="image">
 		
 
 		<h1 class="header-name" itemprop="name">Luis Castro</h1>
@@ -81,7 +85,7 @@
 		</div>
 
 		<div class="executive-summary" itemprop="description">
-			<p>Currently working in Barcelona, Spain. Making products that work fast, are easy to use, persuasive, relevant to the customer and fit in the business environment.</p>
+			<p>Currently working from Barcelona, Spain. Making products that work fast, are easy to use, persuasive, relevant to the customer and fit in the business environment.</p>
 		</div>
 
 		<div class="contact-container">
@@ -206,6 +210,23 @@
 	</section>
 	
 
+	
+	<section class="content-section">
+		<header class="section-header">
+			<h2>Side Projects</h2>
+		</header>
+
+		
+		<div class="resume-item" itemscope itemtype="http://schema.org/CreativeWork">
+			<meta itemprop="creator" content="Luis Castro" itemtype="http://schema.org/Person"/>
+			<h3 class="resume-item-title" itemprop="name"><a href="http://chompapp.io"
+																				 itemprop="url">Chomp Treats</a></h3>
+			<h4 class="resume-item-details" itemprop="description">Creator &bull; Currently maintaining</h4>
+			<p class="resume-item-copy">Chomp makes it easy for raw feeders worldwide to track their loved ones' food intake. Available to download on the <a href="https://apps.apple.com/us/app/chomp-treats/id1511759798" aria-label="Download Chomp treats from the AppStore" itemprop="url" rel="noreferrer" target="_blank">AppStore</a> and <a href="https://play.google.com/store/apps/details?id=com.luiscastro.chomptreats" aria-label="Download Chomp treats from the Play Store" itemprop="url" rel="noreferrer" target="_blank">Play Store</a>.</p>
+		</div>
+		
+
+	</section>
 	
 
 	
